--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/web3@4.11.1/dist/web3.min.js"></script>
-    <script src="./contracts.js"></script>
-	<script src="./script.js"></script>
+    	<script src="https://cdn.jsdelivr.net/npm/web3@4.11.1/dist/web3.min.js"></script>
+    	<script src="./contracts.js"></script>
+	<script type="module" src="script.js"></script>
 </head>
 <body>
 
