--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
   </div>
   
 
+  <button id="free-silver-btn" onclick="getFreeSilver()">
+  <img src="./silver.png" class="silver-icon" />
+  Get some free silver
+  </button>
 
 </body>
 </html>
