--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
   </div>
   
 
-  <button id="free-silver-btn" onclick="getFreeSilver()">
-  <img src="./silver.png" class="silver-icon" />
-  Get some free silver
-  </button>
+<button id="free-silver-btn" onclick="getFreeSilver()">
+  <img src="./silver.png" id="alineadoTextoImagenCentro" />
+  <span class="token">Get some free silver</span>
+</button>
 
 </body>
 </html>
