--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
     <div class="spinner"></div>
   </div>
   
-
 <button id="free-silver-btn" onclick="getFreeSilver()">
-  <img src="./silver.png" id="alineadoTextoImagenCentro" />
-  <span class="token">Get some free silver</span>
+  <img src="./silver.png" />
+  <label style="cursor: pointer;">Get some free silver</label> 
 </button>
 
 </body>
