--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
   </div>
   
 <button id="free-silver-btn" onclick="getFreeSilver()">
-  <img src="./silver.png" />
-  <label style="cursor: pointer;">Get some free silver</label> 
+  <img src="./silver.png" class="silver-icon" />
+  <span>Get some free silver</span>
 </button>
 
 </body>
