--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   
 <button id="free-silver-btn" onclick="getFreeSilver()">
   <img src="./silver.png" class="silver-icon" />
-  <span>Get some free silver</span>
+  <span class="btn-text">Get some free silver</span>
 </button>
 
 </body>
