--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <label id="swap-price-word">Price 
           <div id="swap-price">
-            TOKEN_PRICE <label class="precio">0</label> GOLD
+            TOKEN_PRICE GOLD per SILVER<label class="precio">0</label> 
           </div>
         </label>
 
