--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <label id="swap-price-word">Price 
           <div id="swap-price">
-            TOKEN_PRICE <label class="precio">0 GOLD per SILVER</label> 
+            <label class="precio">0</label> GOLD per SILVER
           </div>
         </label>
 
